--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,19 @@ android {
         }
     }
 }
-
+/**
+ * Add the Zxing Library to make the QR-Code Scanner usable
+ * IMPORTANT:
+ * To use the Version 3.3.0 is an SDK Version 14+ necessary
+ */
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    //implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
+    implementation 'com.android.support:appcompat-v7:25.3.1'   // Version 23+ is required
+    implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:27.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
