Erstellung der MainView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".QRScannerActivity" />
-        <activity android:name=".QRGeneratorActivity"></activity>
+        <activity android:name=".QRGeneratorActivity" />
+        <activity
+            android:name=".TabActivity"
+            android:label="@string/title_activity_tab"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
     </application>
 
 </manifest>
