--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,9 @@ android {
     }
 }
 
+
 dependencies {
+    compile 'com.github.satyan:sugar:1.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
