--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,18 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
 
 
 dependencies {
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+        androidTestCompile 'com.android.support:support-annotations:24.0.0'
+        androidTestCompile 'com.android.support.test:runner:0.5'
+        androidTestCompile 'com.android.support.test:rules:0.5'
+
     compile 'com.github.satyan:sugar:1.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
