The event overview can now be opened by clicking on the month in the calendar activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".view.EventOverview"
+            android:label="@string/title_activity_event_overview"></activity>
     </application>
 
 </manifest>
