--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,30 +22,27 @@ repositories {
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
-
 /**
  * Add the Zxing Library to make the QR-Code Scanner usable
  * IMPORTANT:
  * To use the Version 3.3.0 is an SDK Version 14+ necessary
  */
 dependencies {
+    implementation 'com.android.support:support-v4:27.1.1'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    androidTestCompile 'com.android.support:support-annotations:24.0.0'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support:support-annotations:27.1.1'
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestCompile 'com.android.support.test:rules:1.0.1'
 
     compile 'com.github.satyan:sugar:1.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
-
-    //implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     // Version 23+ is required
     implementation 'com.google.zxing:core:3.3.0'
-    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:design:27.1.1'
 }
