--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="hft.wiinf.de.horario">
 
     <application
@@ -10,21 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.activeandroid.app.Application"
-        tools:replace="android:icon">
-        <activity android:name=".MainActivity">
+        android:name="com.activeandroid.app.Application">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_tab"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="AA_DB_NAME" android:value="horario.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="3" />
-        <meta-data
-        android:name="AA_MODELS"
-        android:value="hft.wiinf.de.horario.model.Event, hft.wiinf.de.horario.model.Person, hft.winf.de.horario.model.RepetitionDate" />
 
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="horario.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="12" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="hft.wiinf.de.horario.model.Event, hft.wiinf.de.horario.model.Person, hft.wiinf.de.horario.model.Repetitiondate" />
     </application>
 
 </manifest>
