--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="hft.wiinf.de.horario">
 
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -33,5 +35,4 @@
             android:name="AA_MODELS"
             android:value="model.Event, model.Person, model.RepetitionDate" />
     </application>
-
 </manifest>
