--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        android:name="com.activeandroid.app.Application">
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
         <activity
@@ -32,13 +32,12 @@
         <meta-data
             android:name="AA_DB_NAME"
             android:value="horario.db" />
-
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="12" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="model.Event, model.Person, model.RepetitionDate" />
+            android:value="hft.wiinf.de.horario.model.Event, hft.wiinf.de.horario.model.Person, hft.wiinf.de.horario.model.Repetitiondate" />
     </application>
 
 </manifest>
