--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,13 @@ repositories {
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
-
 /**
  * Add the Zxing Library to make the QR-Code Scanner usable
  * IMPORTANT:
  * To use the Version 3.3.0 is an SDK Version 14+ necessary
  */
 dependencies {
+    implementation 'com.android.support:support-v4:27.1.1'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     androidTestCompile 'com.android.support:support-annotations:24.0.0'
     androidTestCompile 'com.android.support.test:runner:0.5'
