US008: QR-Generator finished # There is a lot of Temp and Testing "things" that is to Remove later!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     }
     sourceSets {
         main {
-            manifest.srcFile 'src/main/AndroidManifest.xml';
+            manifest.srcFile 'src/main/AndroidManifest.xml'
 
         }
     }
@@ -41,21 +41,12 @@ repositories {
     mavenCentral()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
-
-
-/**
- * Add the Zxing Library to make the QR-Code Scanner usable
- * IMPORTANT:
- * To use the Version 3.3.0 is an SDK Version 14+ necessary
- */
 dependencies {
-
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'com.android.support:support-annotations:27.1.1'
     testImplementation 'com.android.support.test:runner:1.0.1'
     testImplementation 'com.android.support.test:rules:1.0.1'
     testImplementation 'org.robolectric:robolectric:3.8'
-
     androidTestImplementation 'com.android.support.test:runner:1.0.2-alpha1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
@@ -63,7 +54,9 @@ dependencies {
     implementation 'com.github.sundeepk:compact-calendar-view:2.0.3-beta'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'com.google.zxing:core:3.3.0'
+}
