--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,9 @@ dependencies {
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:design:27.1.1'
     androidTestImplementation 'junit:junit:4.12'
+
+    // Stetho core
+    compile 'com.facebook.stetho:stetho:1.5.0'
+    //If you want to add a network helper
+    compile 'com.facebook.stetho:stetho-okhttp:1.5.0'
 }
