--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -23,7 +22,7 @@ android {
     }
     sourceSets {
         main {
-            manifest.srcFile 'src/main/AndroidManifest.xml'
+            manifest.srcFile 'src/main/AndroidManifest.xml';
 
         }
     }
@@ -48,25 +47,18 @@ repositories {
  * To use the Version 3.3.0 is an SDK Version 14+ necessary
  */
 dependencies {
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:support-v4:27.1.1'
-    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    androidTestCompile 'com.android.support.test:runner:1.0.2'
+    implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    androidTestImplementation 'com.android.support.test:runner:0.5'
 
-    testImplementation 'com.android.support:support-annotations:27.1.1'
-    testImplementation 'com.android.support.test:runner:1.0.1'
-    testImplementation 'com.android.support.test:rules:1.0.1'
-    testImplementation 'org.robolectric:robolectric:3.8'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-
-    androidTestImplementation 'com.android.support.test:runner:1.0.2-alpha1'
-    testCompile 'org.robolectric:robolectric:3.8'
-    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    androidTestCompile 'com.android.support:support-annotations:27.1.1'
-    androidTestCompile 'com.android.support.test:rules:1.0.1'
+    testImplementation 'org.robolectric:robolectric:3.8'
+    implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2-alpha1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -76,32 +68,24 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    androidTestImplementation 'com.android.support.test:runner:1.0.2-alpha1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    implementation 'com.github.satyan:sugar:1.3'
-    implementation 'com.github.sundeepk:compact-calendar-view:2.0.3-beta'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
 
-    compile 'com.github.sundeepk:compact-calendar-view:2.0.3-beta'
+    implementation 'com.github.sundeepk:compact-calendar-view:2.0.3-beta'
 
     implementation 'com.android.support:design:27.1.0'
 
     //implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
-    implementation 'com.android.support:appcompat-v7:27.1.1'
     // Version 23+ is required
-    implementation 'com.google.zxing:core:3.3.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:design:27.1.1'
     androidTestImplementation 'junit:junit:4.12'
+
+    // Stetho core
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    //If you want to add a network helper
+    implementation 'com.facebook.stetho:stetho-okhttp:1.5.0'
 }
