--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,7 @@ dependencies {
 
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    implementation 'com.github.satyan:sugar:1.3'
+    //implementation 'com.github.satyan:sugar:1.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
