NOT TESTABLE YET Started coding three User Stories instead of one. US014: Because I need a fragment to work on, I created the fragment to show participants of an event. (MockUp 10/25 Rückmeldungen_zugesagt) I implemented a swipeToRefresh layout to trigger an update on the participants. The code should be okay here. (US043)
While coding the SMSparsing, I directly implemented a contact list comparison which was a matter of 10 lines of code. (US015)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    //github lib for SMS reading and more
+    compile 'me.everything:providers-android:1.0.1'
 
     implementation 'com.github.sundeepk:compact-calendar-view:2.0.3-beta'
 
