--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
             </intent-filter>
         </activity>
 
-
+        <activity android:name=".CaptureActivityPortrait"
+            android:screenOrientation="sensor"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <meta-data
             android:name="AA_DB_NAME"
             android:value="horario.db" />
