--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     androidTestImplementation 'junit:junit:4.12'
 
+    implementation 'me.dm7.barcodescanner:zxing:1.8.4'
+
     // Stetho core
     implementation 'com.facebook.stetho:stetho:1.5.0'
     //If you want to add a network helper
