Not done yet. Do not test. Only for repository purposes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="hft.wiinf.de.horario">
     <uses-permission android:name="android.permission.READ_SMS" android:protectionLevel="normal" />
     <uses-permission android:name="android.permission.READ_CONTACTS" android:protectionLevel="normal" />
-
+    <uses-permission android:name="android.permission.RECEIVE_SMS" android:protectionLevel="normal"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
@@ -70,6 +70,14 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".service.SmsReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter android:priority="999">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
     </application>
