Revert "merged quality"
This reverts commit 08e4c254b48d1e7defc2316ce692c5ab608a409b, reversing
changes made to b809a9ec61abf8c1a9b23a02f5d4f6ecc8414f7e.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,11 +62,9 @@
             android:name="com.activeandroid.content.ContentProvider"
             android:authorities="${applicationId}"
             android:enabled="true"
-            android:exported="false">
-        </provider>
+            android:exported="false"></provider>
 
-        <receiver android:name=".service.NotificationReceiver">
-        </receiver>
+        <receiver android:name=".service.NotificationReceiver"></receiver>
         <receiver
             android:name=".service.DeviceBootReceiver"
             android:enabled="true"
@@ -87,13 +85,11 @@
         <receiver
             android:name=".controller.SendSmsController"
             android:enabled="true"
-            android:exported="true">
-        </receiver>
+            android:exported="true"></receiver>
 
         <service
             android:name=".service.FailedSMSService"
             android:exported="true"
-            android:permission="android.permission.BIND_JOB_SERVICE">
-        </service>
+            android:permission="android.permission.BIND_JOB_SERVICE"></service>
     </application>
 </manifest>
